--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 
 .topmenu:hover {
   color: white;
-  /* Add the styles here */
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
 .topdiv {
@@ -36,7 +37,8 @@ body {
 .profile_name {
   float: left;
   padding-left: 2cm;
-  /* Add the styles here */
+  color: white;
+  font-size: 20px;
 }
 
 .profile_name .contact_info {
@@ -47,9 +49,14 @@ body {
   flex-direction: row;
 }
 
+.contact_info a{
+  color: white;
+}
+
 .contact_info img {
-  width:25px;
+  width: 20px;
   margin-right: 10px;
+  margin-bottom: 5px;
   float:left;
 }
 
@@ -99,15 +106,24 @@ h2 {
 
 #about-me p {
   font-size: 25px;
-  color: rgb(128, 128, 128);
+  color: rgb(108, 108, 108);
   margin-top: -1cm;
+  margin-right: 1cm;
+}
+
+#about-me aside {
+  font-size: 15px;
+  margin-left: 1cm;
+  color: rgb(128, 128, 128);
 }
 
 .profile_image {
-  width: 550px;
+  width: 450px;
   height: fit-content;
   vertical-align: middle;
-  margin: 5px;
+  margin-left: 1cm;
+  margin-right: 1cm;
+  margin-top: 1cm;
 }
 
 /* Skills */
@@ -135,9 +151,8 @@ h2 {
   align-items: center;
 }
 
-.skills h6 {
+.skills h5 {
   align-items: center;
-  font-size: 20px;
   margin-block-start: 8px;
   margin-block-end: 5px;
   font-weight: bold;
