Update personal link layout and remove all of recommendations functionality

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   float: left;
   padding-left: 2cm;
   color: white;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .profile_name .contact_info {
@@ -51,6 +51,7 @@ body {
 
 .contact_info a{
   color: white;
+  margin-right: 15px;
 }
 
 .contact_info img {
@@ -177,6 +178,7 @@ h2 {
 .projects-container {
   margin-top: 30px;
   margin-left: 60px;
+  margin-bottom: 1cm;
 }
 
 .projects-container hr {
@@ -200,38 +202,6 @@ h2 {
   margin-left: 30px;
 }
 
-/* Recommendations */
-
-.all_recommendations {
-  display: flex;
-  align-items: center;
-  margin-left: 1in;
-  flex-direction: row;
-  flex-flow: wrap;
-  padding: 20px;
-}
-
-.recommendation {
-  font-style: italic;
-  text-align: left;
-  width: 21.875rem;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 11px;
-  box-shadow: 0 3px 10px var(--primary-shadow);
-  padding: 20px;
-  margin: 10px;
-  border:1px solid gray;
-  font-size: 18px;
-  height:150px
-}
-
-.recommendation span {
-  color: #7600bc;
-  font-size: 20px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
 /* Scroll to Top Button */
 
 .iconbutton{
@@ -246,69 +216,6 @@ h2 {
   right: 3%;
   bottom: 3%;
   cursor: pointer;
-}
-
-/* Form Pop-up */
-
-.popup {
-  width:400px;
-  background-color: #e8bcf0;
-  border-radius: 3mm;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  text-align: center;
-  position: fixed;
-  /* padding: 30px; */
-  visibility: hidden;
-}
-
-.popup img {
-  padding-top: 20px;
-}
-
-.popup button {
-  background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
-  display: block;
-  border-radius: 6px;
-  text-align: center;
-  margin: 50px;
-  padding: 10px;
-  width: 2in;
-  font-size: 20px;
-  margin-left: 25%;
-}
-
-.popup button:hover {
-  background-color: #fff;
-  border: 2px solid #7600bc;
-  color: #7600bc;
-  display: block;
-  font-weight: bolder;
-  text-align: center;
-  cursor: pointer;
-  margin-left: 25%;
-}
-
-/* Recommendation Form */
-
-input, textarea {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-  margin: 10px;  
-  width:100%;
-}
-
-fieldset {
-  display: flexbox;
-  align-content: center;
-  justify-content: center;  
-  padding: 25px; 
-  margin-left: 50px; 
-  margin-right: 50px;   
-  border: thin solid white;
-  width: 50%;
 }
 
 /* Buttons */
