--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 /* Navigation Bar */
 
 #home {
-  background-color:  #7600bc;
+  background-color:  #455469;
   padding-bottom: 1cm;
   margin-left:-1cm;
   margin-right:-1cm;
@@ -68,7 +68,7 @@ h2 {
   font-size: 50px;
   text-align: center;
   float: left;
-  color: #7600bc;
+  color: #455469;
   margin: 30px;
   margin-left: 60px;
   margin-top: 40px;
@@ -102,7 +102,7 @@ h2 {
 #about-me h1 {
   font-size: 65px;
   margin-top: 90px;
-  color: #7600bc;
+  color: #455469;
 }
 
 #about-me p {
@@ -208,7 +208,7 @@ h2 {
   width: 48px;
   height: 48px;
   border-radius: 100%;
-  background-color: #7600bc;
+  background-color: #455469;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -222,8 +222,8 @@ h2 {
 
 button {
   background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
+  border: 1px solid #455469;
+  color: #455469;
   display: block;
   border-radius: 6px;
   text-align: center;
@@ -234,8 +234,8 @@ button {
 }
 
 button:hover {
-  background-color: #7600bc;
-  border: 1px solid #7600bc;
+  background-color: #455469;
+  border: 1px solid #455469;
   color: #fff;
   display: block;
   border-radius: 6px;
